--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="hero" id="hero">
         <div class="hero__container">
             <h1 class="title">sarah bakhti</h1>
-            <span>développeur web junior</span>
+            <span class="hero__container_title">développeur web junior</span>
             <p>Je développe des sites web combinant le front-end, le back-end, le responsive design et la gestion de bases de données pour proposer des solutions globales et efficaces</p>
             <div class="hero__links">
                 <a href="#projects" class="buttons-links">Projets</a>
