chore: ajout d'un projet dans la section projects

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <span>Mes projets</span>
         <div class="projects__container">
             <div class="projects__project">
-                <img src="img/fastauto2.JPG" alt="">
+                <img src="img/fastauto.JPG" alt="">
                 <div class="projects__project-overlay">
                     <div class="projects__project-content">
                         <span class="projects__project-title">Fast auto</span>
@@ -197,10 +197,24 @@
                             <span>PHP</span>
                             <span>MySQL</span>
                         </div>
-                        <a href="" class="projects__project-link">Voir le site <img src="img/icon/arrow-icon.png" class="icon" alt="icone-fleche"></a>
+                        <a href="" target="_blank" title="Voir le site - Nouvel onglet" class="projects__project-link">Voir le site <img src="img/icon/arrow-icon.png" class="icon" alt="icone-fleche"></a>
                     </div>
                 </div>
             </div>
+            <div class="projects__project">
+                <img src="img/exercice-html-css.JPG" alt="">
+                <div class="projects__project-overlay">
+                    <div class="projects__project-content">
+                        <span class="projects__project-title">Exercice d'intégration web</span>
+                        <p class="projects__project-description">Exercice d'intégration web réalisé dans le cadre d'un cours HTML/CSS.</p>
+                        <div class="projects__project-technologies">
+                            <span>HTML/CSS</span>
+                        </div>
+                        <a href="https://sbakhti00.github.io/exercice-html-css/" target="_blank" title="Voir le site Exercice HTML/CSS - Nouvel onglet" class="projects__project-link">Voir le site <img src="img/icon/arrow-icon.png" class="icon" alt="icone-fleche"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer id="footer">
         <div class="footer__container container">
