--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2 class="title">à propos</h2>
             <span>Viser la performance en s'engageant pleinement</span>
             <p>Je m'appelle Sarah, j'ai 24 ans et je suis en reconversion professionnelle afin de devenir développeur web après trois ans en tant que téléconseillère. Passionnée par la programmation et très interessée par le développement en général, je suis actuellement en formation à Metz Numeric School pour concrétiser ce projet de reconversion.</p>
-            <a href="" class="buttons-links"><img src="img/icon/download-icon.png" alt="icone-telechargement" class="icon">Télécharger le CV</a>
+            <a href="files/CV-Sarah-Bakhti.pdf" download="CV-Sarah-Bakhti.pdf" target="_blank" title="Télécharger le CV - Nouvel onglet" class="buttons-links"><img src="img/icon/download-icon.png" alt="icone-telechargement" class="icon">Télécharger le CV</a>
         </div>
     </section>
     <section class="skills" id="skills">
@@ -90,6 +90,15 @@
                     <div class="skills__label-percentage">
                         <span class="skills__label">JavaScript</span>
                         <span class="skills__percentage">50%</span>
+                    </div>
+                </div>
+                <div class="skills__skill">
+                    <div class="skills__bar-container">
+                        <div class="skills__bar-progress react-bar animation"></div>
+                    </div>
+                    <div class="skills__label-percentage">
+                        <span class="skills__label">React</span>
+                        <span class="skills__percentage">60%</span>
                     </div>
                 </div>
                 <div class="skills__skill">
@@ -151,7 +160,7 @@
                     </div>
                     <div class="skills__label-percentage">
                         <span class="skills__label">Github</span>
-                        <span class="skills__percentage">60%</span>
+                        <span class="skills__percentage">50%</span>
                     </div>
                 </div>
                 <div class="skills__skill">
@@ -168,7 +177,6 @@
         <!-- <div class="skills__soft-skills">
             <div class="skills__soft-skills-item">
                 <span class="skills__soft-skills-title">Adaptabilité</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="skills__soft-skills-item">
                 <span class="skills__soft-skills-title">Travail en équipe</span>
