--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2 class="title">à propos</h2>
             <span>Viser la performance en s'engageant pleinement</span>
             <p>Je m'appelle Sarah, j'ai 24 ans et je suis en reconversion professionnelle afin de devenir développeur web après trois ans en tant que téléconseillère. Passionnée par la programmation et très interessée par le développement en général, je suis actuellement en formation à Metz Numeric School pour concrétiser ce projet de reconversion.</p>
-            <a href="files/CV-Sarah-Bakhti.pdf" download="CV-Sarah-Bakhti.pdf" target="_blank" title="Télécharger le CV" class="buttons-links"><img src="img/icon/download-icon.png" alt="icone-telechargement" class="icon">Télécharger le CV</a>
+            <a href="files/CV-Sarah-Bakhti.pdf" download="CV-Sarah-Bakhti.pdf" title="Télécharger le CV" class="buttons-links"><img src="img/icon/download-icon.png" alt="icone-telechargement" class="icon">Télécharger le CV</a>
         </div>
     </section>
     <section class="skills" id="skills">
